# ChangeLog for dev-libs/rasqal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/rasqal/ChangeLog,v 1.10 2007/05/14 20:18:59 bangert Exp $

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

*rasqal-0.9.14 (11 May 2007)

  11 May 2007; Christian Heim <phreak@gentoo.org> metadata.xml,
  +rasqal-0.9.14.ebuild:
  Version bump, assigning dev-libs/rasqal to myself. Fixing the remaining
  ebuild.badheader.

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -rasqal-0.9.6.ebuild,
  -rasqal-0.9.11.ebuild:
  QA: Removed unused versions.

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> rasqal-0.9.12.ebuild:
  Mark 0.9.12 ~ia64

*rasqal-0.9.12 (02 Jul 2006)

  02 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rasqal-0.9.12-typos.patch, +rasqal-0.9.12.ebuild:
  Version bump and fix some typos #137532 by Joe Button.

  02 Apr 2006; Mike Frysinger <vapier@gentoo.org> rasqal-0.9.10.ebuild,
  rasqal-0.9.11.ebuild:
  Change USE=xml2 to USE=xml #116346.

*rasqal-0.9.11 (26 Feb 2006)

  26 Feb 2006; Mike Frysinger <vapier@gentoo.org> +rasqal-0.9.11.ebuild:
  Version bump.

*rasqal-0.9.10 (18 Oct 2005)

  18 Oct 2005; Mike Frysinger <vapier@gentoo.org> +rasqal-0.9.10.ebuild:
  Version bump.

*rasqal-0.9.6 (06 Feb 2005)

  06 Feb 2005; Mike Frysinger <vapier@gentoo.org> +rasqal-0.9.6.ebuild:
  Version bump and amd64 lovin.

*rasqal-0.9.4 (10 Nov 2004)

  10 Nov 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.