@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX rasqal-0.9.12-typos.patch 383 RMD160 8236a94792d0a409454aaa4d4bcd3e797616048d SHA1 0003a36340ea36e39605fcc8e7bd54face39f8d1 SHA256 8f06c583ccb57865d9db95a94641b13675ba912e24a7a32bd462aab898ea0673
 MD5 f9e77f98900e3e8909bc0cfb1b684e5d files/rasqal-0.9.12-typos.patch 383
 RMD160 8236a94792d0a409454aaa4d4bcd3e797616048d files/rasqal-0.9.12-typos.patch 383
@@ -5,22 +8,22 @@ SHA256 8f06c583ccb57865d9db95a94641b13675ba912e24a7a32bd462aab898ea0673 files/ra
 DIST rasqal-0.9.10.tar.gz 755006 RMD160 e40f852b1ca3d37996a84568deae59f48012f054 SHA1 8779597e8d8de8cc6348441660ae75ca8763db5d SHA256 2b39a8632a461c4dd62a2ea22bc357648df60212f87168cb85407f5e1667bedf
 DIST rasqal-0.9.12.tar.gz 914774 RMD160 d67c865f649a9a4890ce4776ab717bc9d6ff0f89 SHA1 477bf55c2685602af2279574006a94fbe64f6711 SHA256 f5b4d4d7f08da70e306f1cf40a544adc3dfed5d9373a1b863dce8851aa8f96f0
 DIST rasqal-0.9.14.tar.gz 972177 RMD160 62cfda730de38bc0403d98d85747b1080282d6be SHA1 80f4051b1dde928b1f071475c7941cd6ae9ce46b SHA256 eb00352df5e0bf1de49d2f989a8172bc5c44ecdade7af2b8013eda2703c8eed6
-EBUILD rasqal-0.9.10.ebuild 930 RMD160 564a2080a4dfe3190d7ef9c0899b0aad157eb067 SHA1 ccf2d27ec738c3c9275004056080b949fa29bd00 SHA256 54b9a9ea72d50a86a04c838bbdd40c5dd7f2b261c77a4b620dd41a2614aa870a
-MD5 feaf35286cc8ca756ce91f971b9c0d2a rasqal-0.9.10.ebuild 930
-RMD160 564a2080a4dfe3190d7ef9c0899b0aad157eb067 rasqal-0.9.10.ebuild 930
-SHA256 54b9a9ea72d50a86a04c838bbdd40c5dd7f2b261c77a4b620dd41a2614aa870a rasqal-0.9.10.ebuild 930
-EBUILD rasqal-0.9.12.ebuild 1041 RMD160 e73fe3966ccfb180c9843afed7abf0cc85d02648 SHA1 1aebe4c17f2c7a437b766541a4adfbbdb1134f61 SHA256 eb24670252acf7a58905303b91e5eba8c143392f47463e4e407725ac28722661
-MD5 5b3e08f302b1f5746b5a7b54c59ae125 rasqal-0.9.12.ebuild 1041
-RMD160 e73fe3966ccfb180c9843afed7abf0cc85d02648 rasqal-0.9.12.ebuild 1041
-SHA256 eb24670252acf7a58905303b91e5eba8c143392f47463e4e407725ac28722661 rasqal-0.9.12.ebuild 1041
-EBUILD rasqal-0.9.14.ebuild 958 RMD160 bd874ee2f2351204da670fe78765694ac1b1d583 SHA1 9b9c43ded2376e84eff11a8d9be15d09f3147c56 SHA256 9a63bd630ea1896506b590c865df2ed5a145982cbaac47da7dc9833e6b53f443
-MD5 6bd9ba864c3e0cf40ea61884c004d3a9 rasqal-0.9.14.ebuild 958
-RMD160 bd874ee2f2351204da670fe78765694ac1b1d583 rasqal-0.9.14.ebuild 958
-SHA256 9a63bd630ea1896506b590c865df2ed5a145982cbaac47da7dc9833e6b53f443 rasqal-0.9.14.ebuild 958
-MISC ChangeLog 1565 RMD160 c7852a0211d1582356a2eae4a96163f6370c7b2b SHA1 fc2fad77f8261bc3f61f47a543f5f75106dd31e5 SHA256 f672865730c0756174884f872a11bcded029e1f848c450b8a714356978e657e5
-MD5 734c5caf67b879aa094ba109dc796dde ChangeLog 1565
-RMD160 c7852a0211d1582356a2eae4a96163f6370c7b2b ChangeLog 1565
-SHA256 f672865730c0756174884f872a11bcded029e1f848c450b8a714356978e657e5 ChangeLog 1565
+EBUILD rasqal-0.9.10.ebuild 932 RMD160 b00f6769cb9fe8d035725482ae8890376827ce2d SHA1 a4c9a7859f7c2ec539f8228121ab0a6301336e26 SHA256 98ee949d3533b70aab0716eca91b3e988a552648e66aa26f2f6bed039b79a5e0
+MD5 897ae7a1b789ca10a5d1659e1b088a94 rasqal-0.9.10.ebuild 932
+RMD160 b00f6769cb9fe8d035725482ae8890376827ce2d rasqal-0.9.10.ebuild 932
+SHA256 98ee949d3533b70aab0716eca91b3e988a552648e66aa26f2f6bed039b79a5e0 rasqal-0.9.10.ebuild 932
+EBUILD rasqal-0.9.12.ebuild 1041 RMD160 f18c55ab7921ff52449f39e76e6c767fd32d27cb SHA1 4e60cf35bbc6b3499aab865fa68b2d21b1989ab8 SHA256 98562cc5cdd67b37a03cbd92a21ec165519987dfa3378ffc3a4bb023f9d334a7
+MD5 f64b769db6d7719bb70f53c16255d9a1 rasqal-0.9.12.ebuild 1041
+RMD160 f18c55ab7921ff52449f39e76e6c767fd32d27cb rasqal-0.9.12.ebuild 1041
+SHA256 98562cc5cdd67b37a03cbd92a21ec165519987dfa3378ffc3a4bb023f9d334a7 rasqal-0.9.12.ebuild 1041
+EBUILD rasqal-0.9.14.ebuild 960 RMD160 a79622d520475492e49f95237b1b7df4972727ba SHA1 0d1c9a9e013ccb9931dd4b5d98811f978041d414 SHA256 2c095dbaf1d6827ea3b4c6c06b2c53874789cd784bd8e9548fcb822472ad2256
+MD5 fea47e4874de89d3f8c29bc266b28fbd rasqal-0.9.14.ebuild 960
+RMD160 a79622d520475492e49f95237b1b7df4972727ba rasqal-0.9.14.ebuild 960
+SHA256 2c095dbaf1d6827ea3b4c6c06b2c53874789cd784bd8e9548fcb822472ad2256 rasqal-0.9.14.ebuild 960
+MISC ChangeLog 1742 RMD160 6b1fe74a5594e36d034ccfa9154af213de060af8 SHA1 0ca40f3179e25db19f3480a19094ec7db85c0176 SHA256 d990dd2821db72c41926ff9ccd960cb77f890909faecea47b7312a72b1b787c7
+MD5 ca42a2019c2a88ba7810958205dd9253 ChangeLog 1742
+RMD160 6b1fe74a5594e36d034ccfa9154af213de060af8 ChangeLog 1742
+SHA256 d990dd2821db72c41926ff9ccd960cb77f890909faecea47b7312a72b1b787c7 ChangeLog 1742
 MISC metadata.xml 254 RMD160 9a58d756aa694a26f34b5edb16ddceec400dbe54 SHA1 e0893014c4486f687317deee49cb1de7af5c41b0 SHA256 a3b5e690060f3eb7bae993a98b414e33f0863b3106ee9993c9130759f1ec167c
 MD5 8a9821f2d4bcf6486cda49faa33c0286 metadata.xml 254
 RMD160 9a58d756aa694a26f34b5edb16ddceec400dbe54 metadata.xml 254
@@ -34,3 +37,10 @@ SHA256 ceb7bdae8db422382d9d53f74b683d6befbac882f02d10f0e6e9569517f76645 files/di
 MD5 1a0f1a0bc2d32853f0973daf52569eaa files/digest-rasqal-0.9.14 241
 RMD160 859237ca6e177f14ee6b8505d7729afad7a8ca54 files/digest-rasqal-0.9.14 241
 SHA256 c449d7943598d08597ea2958401bbb4e57a460131ab1e4f680744bd18860e3a6 files/digest-rasqal-0.9.14 241
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGcPYeyuNVb5qfaOYRAt1mAJ9ckp5qVonFqOwxrFTepg2SKxkP/wCdE1K7
+IJiVVki/73X672vORElYKRw=
+=obHV
+-----END PGP SIGNATURE-----
